guestbook/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.app.guestbook.localdev.me
    http:
      paths:
      - backend:
          service:
            name: guestbook
            port:
              number: 80
        path: /
        pathType: Prefix
